# RetLister

./: .env.example  .gitignore  README.md  TESTING.md
FlutterAPP/flutter_app/: pubspec.yaml
ProxyService/: Cargo.toml  README.md
ProxyService/data/: proxy.db  proxy.db-shm  proxy.db-wal
ProxyService/src/: main.rs
RustServer/: Cargo.toml  DEPLOYMENT.md  README.md  backup.ps1  optimizer.py  populate_db.ps1
RustServer/Migrations/: 0001_leftovers.sql  20251117000001_add_constraints.sql  20251117120000_add_indexes.sql  20251117130000_schema_metadata.sql  20251117140000_vans_and_cargo.sql  20251118160000_add_wheel_wells.sql
RustServer/data/: retlister.db  retlister.db-shm  retlister.db-wal
RustServer/data/backups/daily/: retlister_daily_20251117_032427.db-shm  retlister_daily_20251117_032433.db-wal
RustServer/src/: cutting_optimizer.rs  main.rs
TauriAPP/: CARRINHAS_SPEC.md  README.md  package-lock.json  package.json
TauriAPP/src/: App.css  App.jsx  CuttinPlanVisualization.jsx  VanVisualization.jsx  api.js
TauriAPP/src-tauri/: Cargo.toml  tauri.conf.json
TauriAPP/src-tauri/icons/: icon.icns
TauriAPP/src-tauri/src/: lib.rs  main.rs
Win32APP/: README.md  RetLister.c  RetLister.cpp  RetLister_fixed.c  build.bat  build_mingw.bat  build_pelles.bat  proxy.cfg  ui.cfg
data/: retlister.db-shm  retlister.db-wal
