[package]
name = "retlister-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
